Added Camera feature.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.2'
     implementation 'org.apache.poi:poi:4.1.2'
     implementation 'org.apache.poi:poi-ooxml:4.1.2'
+    def room_version = "2.2.6"
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
 }
